src/main/java/error/example/domain/runtimeexception/SomeDomainRuntimeException.java
package error.example.domain.runtimeexception;

public class SomeDomainRuntimeException extends DomainRuntimeException {

    public SomeDomainRuntimeException(String message) {
        super(message);
    }
}
